lldpd (0.9.5)
  * Change:
    + More Ethernet media supported. However, RFC4836 is quite
      out-of-date with respected to 10G+ speeds, bringing some
      inaccuracies.
    + Directly get media information for an interface without using
      the privileged process.
  * Fix:
    + Compilation fix with older versions of GCC.
    + Don't use ethtool at all to get real MAC address for enslaved
      devices (always use /proc).

lldpd (0.9.4)
  * Change:
    + Make lldpd accepts a `-p` option to specify the PID file.
    + Ability to change multicast MAC address to two additional values
      to reach customer bridges.
    + lldpcli will now display chassis TTL when detailed view is enabled.
  * Fix:
    + Fix setting of local value for port ID.
    + Fix compilation with BSD make.
    + Ensure lldpcli returns an error code on invalid commands.

lldpd (0.9.3)
  * Change:
    + Do not rely on support of constructors for liblldpctl.
    + Always log to stderr (even in addition to syslog).
    + `lldpcli watch` accepts a limit on the number of received events.
  * Fix:
    + `lldpcli -f {xml,json} watch` should work now.
    + Consider `veth` interfaces as physical interfaces.

lldpd (0.9.2)
  * Change:
    + Ability to add/remove/replace custom TLV from lldpcli.
    + LLDP-MED capabilities are displayed differently in lldpcli.
    + Limit the maximum depth (5) when trying to apply a VLAN.
    + Change JSON output format when using json-c to match Jansson
      output.
    + Integration tests for the major parts of lldpd, including use of
      address and leak sanitizer.
  * Fix:
    + LLDP-MED POE TLV are now displayed in lldpcli.
    + Ignore lower link when it is in another namespace.
    + Fix various problems with interfaces being enslaved.
    + Fix a memory leak when modifying port-related settings.

lldpd (0.9.1)
  * Change:
    + Rework packaging for OS X to make it work with El Capitan. To
      simplify a bit, it is not possible anymore to build fat