@@ -5,6 +5,8 @@ lldpd (0.9.5)
       inaccuracies.
     + Directly get media information for an interface without using
       the privileged process.
+    + LLDP-MED capability TLV is not sent when LLDP-MED is not enabled,
+      even if other LLDP-MED TLV are present.
   * Fix:
     + Compilation fix with older versions of GCC.
     + Don't use ethtool at all to get real MAC address for enslaved
